fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
 }
 
 :root {
+  overflow-x: hidden;
   --primary-color: #5cff9d;
   --secondary-color: #ffe100;
   --background-color: #0b1510;
